Expression evaluation in BucketAuto and GraphLookup can cause avoidable failure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0, 9.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v9.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      An Expression Evaluation that is triggered from the BucketAuto and GraphLookup can fail because the stage does not have enough memory even though the query has. We should create a separate tracker for the expression evaluation to avoid those non-recoverable failures

            Assignee:
            Foteini Alvanaki
            Reporter:
            Foteini Alvanaki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: